54) kernel: mips: module: fix incorrect IS_ERR_VALUE macro usages.<br>
55) kernel: mips: remove aliasing alignment if HW has antialising support.<br>
56) kernel: mips: avoid using unwind_stack() with usermode.<br>
57) kernel: mips: don't unwind to user mode with EVA.<br>
58) kernel: mips: make PCI_DMA_BUS_IS_PHYS=1 constant.<br>
59) kernel: usb: qmi_wwan: add D-Link DWM-221 B1 device id.<br>
60) kernel: usb: cdc_ncm: adding Telit LE910 V2 mobile broadband card.<br>
61) kernel: net: ipv4: l2tp: fix a potential issue in l2tp_ip_recv.<br>
62) kernel: net: sock: convert sk_peek_offset functions to WRITE_ONCE.<br>
63) kernel: net: bridge: fix incorrect variable assignment on error path in br_sysfs_addbr.<br>
64) kernel: net: wext: fix message delay/ordering.<br>
65) kernel: net: fix use after free in the recvmmsg exit path.<br>
66) kernel: net: force inlining of netif_tx_start/stop_queue, sock_hold, __sock_put.<br>
67) kernel: net: route: do not cache fib route info on local routes with oif.<br>
<br>
<br>
<b>4.3.x</b><br>
1) build_system: fix cleanup libext and optimize cleanup userdir.<br>
2) build_system: port and add libtalloc (need for free radius).<br>
3) defaults: add base openspace roaming profile for help start configure at the current place.<br>
4) coovachilli: bstring: sync with git 21.04.2016 (commit 9a86b71).<br>
5) miniupnpd: up to 2.0 version.<br>
6) ralinkiappd: fix segfault in debug mode with level trace.<br>
7) freeradius: porting 3.0.11 freeradius (need for standalone EAP auth for 802.1x support need).<br>
8) freeradius: strip configs and not install not used libs for save flash size.<br>
9) init.d: add logic for radius server start.<br>
10) fastroaming: fix work 802.1x preauth (use iappd daemon for client migrations events).<br>
11) kernel: ralink_wifi: fix build warnings if build with -Wall flag.<br>
12) kernel: ralink_wifi: backport some fixes to MT7620 and MT7610 stable drivers.<br>
<br>
<br>
<br>